[project]
name = "claude-sdk-restaurant-reservations"
version = "0.1.0"
description = "Restaurant reservation intake with Twilio and the Anthropic Claude SDK"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.54.0",
]

[project.scripts]
restaurant-call = "call_app:main"
