[project]
name = "restaurant-reservation-call-intake"
version = "0.1.0"
description = "Restaurant reservation intake with VoIP webhooks, Supabase, and local parsing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
]

[project.scripts]
restaurant-call = "call_app:main"
